# plasma-dsp

./: .gitignore  CMakeLists.txt  Makefile  README.md  ROADMAP.md  conanfile.txt
doc/fir/: fir.tex
include/plasma/: math.hpp
include/plasma/audio/: fir.hpp  fir_decimator.hpp  fir_designer.hpp  fir_interpolator.hpp
include/plasma/dsp/: agc.hpp  chirp.hpp  filter_designer.hpp  fir.hpp  fir_decimator.hpp  fir_designer.hpp  fir_interpolator.hpp  math.hpp  nco.hpp  qpsk.hpp  squelch.hpp
include/plasma/dsp/agc/: agc.hpp
include/plasma/dsp/agc/src/: agc.tci
include/plasma/dsp/squelch/: squelch.hpp
include/plasma/dsp/squelch/src/: squelch.tci
plasma/: agc.hpp  chirp.hpp  fir.hpp  fir_decimator.hpp  fir_designer.hpp  fir_interpolator.hpp  hb_downsampler.hpp  math.hpp  nco.hpp  nco_table.hpp  qpsk.hpp  squelch.hpp
plasma/detail/: agc.ipp  chirp.ipp  fir.ipp  fir_decimator.ipp  fir_designer.ipp  fir_interpolator.ipp  hb_downsampler.ipp  math.ipp  nco.ipp  nco_table.ipp  qpsk.ipp  squelch.ipp
plasma/doc/benchmarks/: 2021-02-20 nco.md  2021-02-21 nco 16-unrolling.txt  2021-02-21 nco no-unrolling.txt  2021-02-21 nco.md  2021-02-22 nco.md
plasma/include/plasma/: kaiser.hpp  kaiser.ipp  math.hpp  nco_no_lookup.ipp  nco_use_lookup.ipp  rrc.hpp  rrc.ipp  upsampler.hpp
plasma/src/: CMakeLists.txt
plasma/src/benchmark/: CMakeLists.txt  nco.cpp
plasma/src/plasma/: downsampler.hpp  downsampler.ipp  kaiser.cpp  kaiser.hpp  math.hpp  nco.hpp  nco_no_lookup.ipp  nco_use_lookup.ipp  upsampler.ipp
plasma/src/test/: CMakeLists.txt  nco.cpp
src/: AudioFrontend.cpp  AudioFrontend.hpp  agc.cpp  main.cpp  math.cpp  squelch.cpp
src/app/: main.cpp
src/audio/: fir.cpp  fir_decimator.cpp  fir_designer.cpp  fir_interpolator.cpp
src/dsp/: agc.cpp  agc.hpp  chirp.cpp  filter_designer.cpp  fir.cpp  fir.hpp  fir_decimator.cpp  fir_designer.cpp  fir_interpolator.cpp  math.cpp  nco.cpp  qpsk.cpp  squelch.cpp  squelch.hpp
src/examples/: main.cpp
src/plasma-dsp/: agc.cpp  fir.cpp  squelch.cpp
src/test/: CMakeLists.txt  agc.cpp  fir.cpp  nco.cpp
v1/: CMakeLists.txt
v1/examples/: CMakeLists.txt
v1/examples/filters/: main.cpp
v1/include/plasma/filter/: filter.hpp
v1/include/plasma/filters/: windowed.hpp
v1/include/plasma/math/: math.hpp
v1/include/plasma/memory/: memory.hpp
v1/include/plasma/noise/: wgn.hpp
v1/include/plasma/version/: version.hpp
v1/include/plasma/windows/: kaiser.hpp  window.hpp
v1/src/filters/: CMakeLists.txt  windowed.cpp
v1/src/noise/: CMakeLists.txt  wgn.cpp
v1/src/version/: CMakeLists.txt  version.cpp
v1/src/windows/: CMakeLists.txt  kaiser.cpp
v1/tests/: CMakeLists.txt
v1/tests/version/: version.cpp
v2/: CMakeLists.txt  compile.cpp
v2/config/: Config.hpp  Config_Verbose.hpp
v2/filter/: FIR.hpp  MonoPhase.hpp  MonoPhase_None.hpp  MonoPhase_x86_4.hpp  MonoPhase_x86_8.hpp  PolyPhase.hpp
v2/optim/: Optim.hpp  SIMD.hpp  SIMD_NEON.hpp  SIMD_x86.hpp
